Port MMM mod to Minecraft 1.20.1