@@ -170,7 +170,7 @@ public class Configs implements IConfigHandler
 
         if (activeProjectId == null || activeProjectId.isBlank() || getActiveProject() == null)
         {
-            activeProjectId = PROJECTS.getFirst().id;
+            activeProjectId = PROJECTS.get(0).id;
         }
 
         dailyProgress = Math.max(0L, dailyProgress);
@@ -332,7 +332,7 @@ public class Configs implements IConfigHandler
                 return project;
             }
         }
-        return PROJECTS.isEmpty() ? null : PROJECTS.getFirst();
+        return PROJECTS.isEmpty() ? null : PROJECTS.get(0);
     }
 
     public static ProjectEntry createProject(String name)
